[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workflow-optimizer-env"
version = "1.0.0"
description = "A production-grade environment for evaluating AI Agent decision making in support workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "requests>=2.31.0",
    "openai>=1.3.5",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/Athes7755/ai-workflow-optimizer-env"

[tool.setuptools.packages.find]
include = ["server*"]
